deck created and randomized

--- a/index.html
+++ b/index.html
@@ -11,13 +11,20 @@
 </head>
 
 <body>
+    <div class = "blackjack game">
+        <h1> Blackjack</h1>
+        <input type="button" class= "btn" value ="deal" onclick ="start()" / >
+        <input type="button" class= "btn" value ="hit" onclick ="hit()" / >
+        <input type="button" class= "btn" value ="stay" onclick ="stay()" / >
+    <div id="players" class= "players"></div>
+    <div id ="deck" class= "deck"></div>
 
     <script
     src="https://code.jquery.com/jquery-3.2.1.min.js"
     integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
     crossorigin="anonymous"></script>
    
-  
+    </div>
     <script src="./myscripts.js"></script>
 </body>
 
