--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   
     <div id="container">
-        <div class="images">
+        <div class="players">
             <div id="playerhand">
             </div>
             <div id="dealerhand">
@@ -28,8 +28,8 @@
             <div class = "hit">
                 <button id="hitBtn">Hit</button>
             </div>
-            <div class = "stand">
-                    <button id="standBtn">Stand</button>
+            <div class = "stay">
+                    <button id="stayBtn">Stay</button>
             </div>
         </div>
   
