working in console

--- a/index.html
+++ b/index.html
@@ -20,17 +20,18 @@
             </div>
         </div>
         <div class="buttons">
+                
             <div class = "deal">
-                <button id="dealBtn">Deal</button>
-            <div class = "reset" >
-                <button id="resetBtn">Reset</button>
+                <button id="deal">Deal</button>
             </div>
             <div class = "hit">
-                <button id="hitBtn">Hit</button>
+                <button id="hit">Hit</button>
             </div>
             <div class = "stay">
-                    <button id="stayBtn">Stay</button>
+                    <button id="stay">Stay</button>
             </div>
+            
+
         </div>
   
             Your score :<input type="text" id="playersum" value="">
